v2.1.0
bug fixes and user recommendations
